--- a/css/stylePesquisa.css
+++ b/css/stylePesquisa.css
@@ -1,6 +1,10 @@
-.formulario {
-     
-}     
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap");
+
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+
 .conteinerP{
       background-color: #fafafa;
       border-radius: 10px;
@@ -10,10 +14,42 @@
       overflow: hidden;
 }
 .titulo{
-      background-color: rgb(99, 93, 93);
-      padding: 20px;
+  background-color: #eee;
+  padding: 20px;
 }
-   
+
+
+.formulario label {
+      display: inline-block;
+      padding-top: 20px;
+      border-radius: 15px;
+      font-size: 20px;
+}
+
+.formulario{
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      border-radius: 15px;
+      font-size: 15px;
+      width: 800px;
+      padding: 15px;
+      padding-left: 15px;
+      padding-bottom: 15px;
+}
+.formulario select{
+      padding-left: 5px;
+}
+
+.formulario button{
+      background-color: #0a20a1;
+      border: 2px solid #0a20a1;
+      color: #fff;
+      font-size: 20px;
+      width: 700px;
+      border-radius: 15px;
+      padding: 10px;
+}
      /*   border-radius: 30px;
         width: 100%;
         height: 50px;
