--- a/css/styleCadastro.css
+++ b/css/styleCadastro.css
@@ -72,7 +72,7 @@
 }
 
 .form-direita input {
-  border: 2px solid #f0f0f0;
+  border: 2px solid #1d1a1a;
   display: block;
   border-radius: 10px;
   font-size: 14px;
@@ -102,7 +102,7 @@
 }
 
 .form-esquerda input {
-  border: 2px solid #f0f0f0;
+  border: 2px solid #1d1a1a;
   display: block;
   border-radius: 10px;
   font-size: 14px;
