--- a/css/stylePesquisa.css
+++ b/css/stylePesquisa.css
@@ -8,7 +8,7 @@
 .conteinerP{
       background-color: #fafafa;
       border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 2px 5px rgba(8, 8, 8, 0.3);
       width: auto;
       max-width: 100%;
       overflow: hidden;
@@ -37,9 +37,6 @@
       padding-left: 15px;
       padding-bottom: 15px;
 }
-.formulario select{
-      padding-left: 5px;
-}
 
 .formulario button{
       background-color: #0a20a1;
@@ -50,6 +47,16 @@
       border-radius: 15px;
       padding: 10px;
 }
+
+.formulario select {
+      border: 2px solid #1d1a1a;
+      display: block;
+      border-radius: 15px;
+      font-size: 14px;
+      width: 100%;
+      padding: 10px;
+      padding-left: 5px;
+    }
      /*   border-radius: 30px;
         width: 100%;
         height: 50px;
